main.tf
resource "aws_security_group" "main" {
  name        = "${local.name_prefix}-sg"
  description = "${local.name_prefix}-sg"
  vpc_id      = var.vpc_id
  tags = merge( local.tags , { Name = "${local.name_prefix}-sg"} )

  ingress {
    description      = "APP"
    from_port        = var.app_port
    to_port          = var.app_port
    protocol         = "tcp"
    cidr_blocks      = var.sg_ingress_cidr
  }
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = var.ssh_ingress_cidr
  }
  ingress {
    description      = "PROMETHEUS"
    from_port        = 9100
    to_port          = 9100
    protocol         = "tcp"
    cidr_blocks      = [element(module.prometheus["prometheus_ip"], count.index)]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_lb_target_group" "main" {
  name     = "${local.name_prefix}-tg"
  port     = var.app_port
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}

resource "aws_lb_target_group" "public" {
  count = var.component == "frontend" ? 1 : 0
  name        = "${local.name_prefix}-pub"
  port        = var.app_port
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = var.default_vpc_id
}

resource "aws_lb_target_group_attachment" "public" {
  count            = var.component == "frontend" ? length(var.az) : 0
  target_group_arn = aws_lb_target_group.public[0].arn
  target_id        = element(tolist(data.dns_a_record_set.private_lb_add.addrs), count.index )
  port             = 80
  availability_zone = "all"
}

resource "aws_route53_record" "main" {
  zone_id = var.zone_id
  name    = "${var.component}-${var.env}"
  type    = "CNAME"
  ttl     = 30
  records = [var.component == "frontend" ? var.public_alb_name : var.private_alb_name]
}


resource "aws_lb_listener_rule" "main" {
  listener_arn = var.private_alb_listener
  priority     = var.lb_priority

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }

  condition {
    host_header {
      values = ["${var.component}-${var.env}.tadikonda.online"]
    }
  }
}

resource "aws_lb_listener_rule" "public" {
  count = var.component == "frontend" ? 1 : 0
  listener_arn = var.public_alb_listener
  priority     = 10

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.public[0].arn
  }

  condition {
    host_header {
      values = ["${var.component}-${var.env}.tadikonda.online"]
    }
  }
}
#
#resource "aws_iam_policy" "main" {
#  name        = "${local.name_prefix}-policy"
#  path        = "/"
#  description = "${local.name_prefix}-policy"
#
#  policy = jsonencode({
#    "Version": "2012-10-17",
#    "Statement": [
#      {
#        "Sid": "VisualEditor0",
#        "Effect": "Allow",
#        "Action": [
#          "ssm:GetParameterHistory",
#          "ssm:GetParametersByPath",
#          "ssm:GetParameters",
#          "ssm:GetParameter"
#        ],
#        "Resource": "arn:aws:ssm:us-east-1:043254050286:parameter/${var.env}.*"
#      },
#      {
#        "Sid": "VisualEditor1",
#        "Effect": "Allow",
#        "Action": "ssm:DescribeParameters",
#        "Resource": "*"
#      }
#    ]
#  })
#}
#
#resource "aws_iam_role" "main" {
#  name = "${local.name_prefix}-role"
#  assume_role_policy = jsonencode({
#    Version = "2012-10-17"
#    Statement = [
#      {
#        Action = "sts:AssumeRole"
#        Effect = "Allow"
#        Sid    = ""
#        Principal = {
#          Service = "ec2.amazonaws.com"
#        }
#      },
#    ]
#  })
#
#  tags = merge( local.tags , { Name = "${local.name_prefix}-role"} )
#
#}
#
#resource "aws_iam_role_policy_attachment" "attach" {
#  role       = aws_iam_role.main.name
#  policy_arn = aws_iam_policy.main.arn
#}
#
#resource "aws_iam_instance_profile" "main" {
#  name = "${local.name_prefix}-role-profile"
#  role = aws_iam_role.main.name
#}
#
#
#resource "aws_launch_template" "main" {
#  name = "${local.name_prefix}-template"
#  image_id = data.aws_ami.ami.id
#  instance_type = var.instance_type
#  vpc_security_group_ids = [aws_security_group.main.id]
#  iam_instance_profile {
#    name = "${local.name_prefix}-role-profile"
#  }
#
#  tag_specifications {
#    resource_type = "instance"
#    tags = merge(local.tags , {Name = "${local.name_prefix}-tem"})
#  }
#
#  user_data = base64encode(templatefile("${path.module}/userdata.sh" , { component=var.component , env=var.env}))
#}
#
#resource "aws_autoscaling_group" "main" {
#  name_prefix          = "${local.name_prefix}-asg"
#  vpc_zone_identifier = var.app_subnet_ids
#  desired_capacity   = var.desired_capacity
#  max_size           = var.max_size
#  min_size           = var.min_size
#  target_group_arns  = [aws_lb_target_group.main.arn]
#
#  launch_template {
#    id      = aws_launch_template.main.id
#    version = "$Latest"
#  }
#  tag {
#    key = "Name"
#    value = local.name_prefix
#    propagate_at_launch = true
#  }
#}

module "prometheus" {
  source = "./prometheus"

  count = var.component == "frontend" ? 1 : 0
  default_vpc_id = var.default_vpc_id
  env = var.env
  tags =  var.tags
}
